# spanda-portfolio

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  robots.txt  sitemap.xml  style.css
.github/workflows/: deploy.yml
src/: animation.rs  app.rs  main.rs
src/sections/: about.rs  code.rs  demos.rs  features.rs  footer.rs  get_started.rs  hero.rs  mod.rs  splash.rs
